Port Flan's Mod to Minecraft 26.1.2 (Fabric)
Full port of the Forge 1.12.2 codebase to Fabric for Minecraft 26.1.2
with Mojang official mappings:

- Rebuilt the build system: Gradle 9.5.1 wrapper, Loom 1.17.19, Fabric
  Loader 0.19.3, Fabric API 0.152.1+26.1.2, identity mappings for the
  unobfuscated game, and a named runtime namespace for class tweakers.
- Ported all 716 source files: TMT renderer core (PoseStack/VertexConsumer
  based with a thread-local render context), entity system (EntityType
  registration, SynchedEntityData, save/load), items (data components,
  keyed registration with setId), blocks and block entities, the teams
  mode, network packets (single CustomPayload with a discriminator codec),
  GUI screens, renderers (render-state based EntityRenderer), creative
  tabs, sounds, loot tables and commands.
- Content packs load from the Flan folder as runtime resource packs
  (FolderRepositorySource registered through the pack repository).
- Item data components are bound early so content pack parsing can create
  ItemStacks before the registries freeze.
- Deleted stale .lang files and mcmod.info; pack.mcmeta updated to
  format 74; sounds.json keys lowercased.
- Tests updated to structural entry-point assertions (no registry
  bootstrap in plain JUnit); 65 tests green; the game launches to the
  main menu and loads all 11 content packs.